# guv_ukv_hgb_report

./: .gitignore  MANIFEST.in  README.md  SKR04_Blueprint_chart_of_accounts.csv  pyproject.toml  setup.py
guv_ukv_hgb_report/: __init__.py  hooks.py
guv_ukv_hgb_report/guv_ukv_hgb_report/: __init__.py
guv_ukv_hgb_report/guv_ukv_hgb_report/report/guv_ukv_hgb_275/: guv_ukv_hgb_275.json  populate_data.py
guv_ukv_hgb_report/guv_ukv_hgb_report/report/guv_ukv_hgb_275/tests/: test_guv_ukv_hgb_275.py
guv_ukv_hgb_report/translations/: en.csv
guv_ukv_hgb_report/ukv_reporting/report/guv_ukv_hgb_275/: guv_ukv_hgb_275.js  guv_ukv_hgb_275.py  populate_data.py
guv_ukv_hgb_report/ukv_reporting/report/guv_ukv_hgb_275/tests/: test_guv_ukv_hgb_275.py
ukv_reporting/: pyproject.toml  setup.py
ukv_reporting/ukv_reporting/: __init__.py  hooks.py  modules.txt  patches.txt
ukv_reporting/ukv_reporting/report/guv_ukv_hgb_275/: guv_ukv_hgb_275.html
ukv_reporting/ukv_reporting/report/guv_ukv_hgb_275/tests/: __init__.py  test_guv_ukv_hgb_275.py  test_guv_ukv_hgb_275_data.py
ukv_reporting/ukv_reporting/ukv_reporting/report/guv_ukv_hgb_275/: __init__.py  constants.py  populate_data.py
ukv_reporting/ukv_reporting/ukv_reporting/report/guv_ukv_hgb_275/tests/: expected_output.json
