[project]
name = "ukv_reporting"
authors = [
    {name = "Helionox GmbH", email = "contact@helionox.eu"}
]
description = "HGB Paragraph 275 Cost of Sales Method Profit and Loss Report"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://helionox.eu"
Repository = "https://github.com/helionox-org/guv-ukv-erp-app"
"Bug Reports" = "https://github.com/helionox-org/guv-ukv-erp-app/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.22.0,<17.0.0"
erpnext = ">=16.22.0,<17.0.0"