[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ukv_reporting"
authors = [
    {name = "Helionox GmbH", email = "contact@helionox.eu"}
]
description = "HGB Paragraph 275 Cost of Sales Method Profit and Loss Report"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://helionox.eu"
